--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@supabase/supabase-js": "latest",
     "@tanstack/react-table": "^8.21.3",
     "@types/jspdf": "^1.3.3",
+    "@yudiel/react-qr-scanner": "^2.3.1",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -52,6 +53,7 @@
     "html5-qrcode": "^2.3.8",
     "input-otp": "1.4.1",
     "jspdf": "^3.0.1",
+    "jsqr": "^1.4.0",
     "lucide-react": "^0.454.0",
     "motion": "^12.18.1",
     "next": "15.2.4",
@@ -59,6 +61,7 @@
     "next-themes": "^0.4.4",
     "ngrok": "^5.0.0-beta.2",
     "papaparse": "latest",
+    "qr-scanner": "^1.4.2",
     "qrcode": "^1.5.4",
     "react": "^19",
     "react-day-picker": "8.10.1",
