--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "jsqr": "^1.4.0",
     "lucide-react": "^0.454.0",
     "motion": "^12.18.1",
-    "next": "15.2.4",
+    "next": "^15.2.4",
     "next-qrcode": "^2.5.1",
     "next-themes": "^0.4.4",
     "ngrok": "^5.0.0-beta.2",
