--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "latest",
+    "date-fns-tz": "^3.2.0",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "^12.23.12",
     "html2canvas": "^1.4.1",
