--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@supabase/supabase-js": "latest",
     "@tanstack/react-table": "^8.21.3",
     "@types/jspdf": "^1.3.3",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "@yudiel/react-qr-scanner": "^2.3.1",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
@@ -85,6 +87,7 @@
     "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
