--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,5 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/add-product/loading.tsx"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "app/sitemap.xml"]
 }
